# DAFace

./: CMakeLists.txt  README.md
config/: daface.conf
data/LFW/: lfw_facial_point.txt
include/: daface_clean.h  daface_crop.h  daface_det.h  daface_draw.h  daface_norm.h
include/util/: boost_app_common.h  boost_app_fs.h  boost_app_parse.h  terminal_color.h
result/clean/: cleaned.txt
result/det/: multiface.txt
src/: daface_clean.cpp  daface_crop.cpp  daface_det.cpp  daface_draw.cpp  daface_norm.cpp  main.cpp
src/util/: boost_app_common.cpp  boost_app_fs.cpp  boost_app_parse.cpp
